server/TinTin/TinTin/src/main/java/com/example/TinTin/util/error/IdInvalidException.java
package com.example.TinTin.util.error;

public class IdInvalidException extends RuntimeException {
    public IdInvalidException(String message) {
        super(message);
    }
}
